--- a/interactions.html
+++ b/interactions.html
@@ -29,7 +29,7 @@ var svg = d3.select("body").append("svg")
     .attr("width", width)
     .attr("height", height);
 
-d3.json("starwars-full-interactions-allCharacters.json", function(error, graph) {
+d3.json("https://github.com/jardno/StarWars-social-network/blob/master/starwars-full-interactions-allCharacters.json", function(error, graph) {
   if (error) throw error;
 
   force
